# fetch

./: .gitignore  Cargo.toml  LICENSE  README.md  copy-bundles.sh
.github/actions/package-windows-msi/: action.yml
.github/workflows/: linux-build.yml  linux.yml  macos-basic-arm64.yml  macos-basic-universal.yml  macos.yml  rust.yml  windows-basic-arm64.yml  windows-basic-template.yml  windows-basic-x64.yml  windows-full-arm64.yml  windows-full-template.yml  windows-full-x64.yml  windows.yml
artifacts/defaults/: data.toml
artifacts/defaults/windows/: daemon.toml  data.toml
fetch-cli/: Cargo.toml  build.rs
fetch-cli/scripts/: copy-bundles.sh
fetch-cli/src/: drop.rs  index.rs  lib.rs  query.rs  query_by_file.rs  utility.rs
fetch-common/: Cargo.toml
fetch-common/src/: bin.rs
fetch-core/: .gitignore  Cargo.toml  build.rs
fetch-core/artifacts/defaults/: daemon.toml  data.toml
fetch-core/artifacts/defaults/windows/: data.toml
fetch-core/artifacts/models/clip-b-32-text/: config.json  model.onnx
fetch-core/artifacts/models/clip-b-32-vision/: model.onnx
fetch-core/artifacts/models/siglip2-b-16-512/: image_embedder.onnx
fetch-core/bundle/models/siglip2-b-16-512/: text_embedder.onnx
fetch-core/src/: app_config.rs  embeddable.rs  environment.rs  file_index.rs  files.rs  index.rs  indexing.rs  lib.rs  previewable.rs  store.rs  vector_store.rs
fetch-core/src/embeddable/: session_pool.rs
fetch-core/src/file_index/: index_files.rs  pagination.rs  query_files.rs
fetch-core/src/file_index/index_files/: error.rs  result.rs
fetch-core/src/file_index/pagination/: integrations.rs
fetch-core/src/file_index/query_files/: error.rs
fetch-core/src/files/: index.rs  pagination.rs  query.rs
fetch-core/src/files/index/: error.rs  result.rs
fetch-core/src/files/pagination/: integrations.rs
fetch-core/src/files/query/: error.rs  result.rs
fetch-core/src/index/: basic_image_index_provider.rs  embedding.rs  integrations.rs  provider.rs
fetch-core/src/index/embedding/: embeddinggemma.rs  sessions.rs  siglip2.rs  siglip2_image_embedder.rs
fetch-core/src/index/embedding/embeddinggemma/: integrations.rs
fetch-core/src/index/embedding/siglip2/: integrations.rs
fetch-core/src/index/embedding/siglip2_image_embedder/: integrations.rs
fetch-core/src/index/provider/: error.rs  image.rs  pdf.rs
fetch-core/src/indexing/: basic_image_index_provider.rs  embedder.rs  integrations.rs  session_pool.rs  store.rs
fetch-core/src/indexing/basic_image_index_provider/: integrations.rs
fetch-core/src/indexing/store/: lancedb.rs
fetch-core/src/indexing/store/lancedb/: integrations.rs
fetch-core/src/previewable/cache/: default.rs  os.rs
fetch-core/src/previewable/cache/default/: image.rs  pdf.rs  psd.rs
fetch-core/src/store/: lancedb.rs
fetch-core/src/vector_store/: lancedb_store.rs
fetch-gui/: .gitignore  Cargo.toml  package-lock.json  package.json
fetch-gui/src/: gui.rs
fetch-gui/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
fetch-gui/src-tauri/capabilities/: default.json  desktop.json  full.json  fullapp.json
fetch-gui/src-tauri/src/: cli.rs  commands.rs  lib.rs  main.rs  utility.rs
fetch-gui/src-tauri/src/commands/: index.rs  open.rs  open_location.rs  preview.rs  query.rs
fetch-gui/src/gui/: tasks.rs  utility.rs  widgets.rs
fetch-gui/src/gui/widgets/: file_tile.rs  results_area.rs
fetch-gui/src/gui/widgets/file_tile/: state.rs  styling.rs
fetch-gui/src/lib/components/index/: IndexDrawer.svelte
fetch-gui/src/lib/components/search/: ResultsArea.svelte
fetch-gui/src/lib/structs/: ReactiveBackgroundFetchQuery.svelte.ts
fetch-gui/src/lib/styles/: components.css
fetch-gui/src/lib/styles/components/: buttons.css
fetch-gui/src/routes/: +page.svelte
fetch-tauri/: package-lock.json  package.json  svelte.config.js
fetch-tauri/src/: app.html
fetch-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
fetch-tauri/src-tauri/capabilities/: default.json  desktop.json  fullapp.json
fetch-tauri/src-tauri/icons/: icon.icns
fetch-tauri/src-tauri/src/: cli.rs  lib.rs  main.rs  utility.rs
fetch-tauri/src-tauri/src/commands/: index.rs  open.rs  open_location.rs
fetch-tauri/src-tauri/windows/: copy-models.ps1  copy-models.vbs
fetch-tauri/src-tauri/windows/fragments/: copy-models.wxs
fetch-tauri/src/lib/components/: FileTile.svelte  Pagination.svelte  ResultsArea.svelte  SearchBar.svelte
fetch-tauri/src/lib/structs/: ReactiveBackgroundFetchQuery.svelte.ts
fetch-tauri/src/lib/styles/: colors.css  components.css  fonts.css
fetch-tauri/src/lib/styles/components/: logo.css  (+1 more)
fetch-tauri/src/routes/: +page.svelte
fetch-tauri/src/routes/full/: +page.svelte
fetch-tauri/src/routes/search/: +page.svelte
fetch/src-tauri/: tauri.conf.json
fetch/src-tauri/capabilities/: quick.json
fetch/src-tauri/src/: commands.rs  lib.rs
fetch/src-tauri/src/commands/: query.rs
fetch/src/lib/structs/: ReactiveBackgroundFetchQuery.svelte.ts
fetch/src/lib/styles/: components.css
fetch/src/routes/: +layout.svelte  +layout.ts
scripts/: copy_dynamic_files.ps1  copy_dynamic_files.sh
src/: app_config.rs  embeddable.rs  file_index.rs  gui.rs  index.rs  lib.rs  main.rs  previewable.rs  semantic_index.rs  storage.rs  tasks.rs  vector_store.rs
src/file_index/: index_files.rs  query_files.rs
src/file_index/index_files/: error.rs
src/file_index/query_files/: error.rs  result.rs
src/fs/: dir_entry_ext.rs  mod.rs
src/gui/: tasks.rs  utility.rs  widgets.rs
src/gui/widgets/: file_tile.rs  results_area.rs
src/gui/widgets/file_tile/: state.rs  styling.rs
src/index/: lancedb_store.rs
src/preview/: mod.rs
src/preview/previewable/: default_preview_generator.rs  mod.rs  os_preview_generator.rs
src/previewable/: cache.rs  default_preview_generator.rs  os_preview_generator.rs
src/previewable/cache/: default.rs  os.rs
src/previewable/cache/default/: image.rs
src/semantic_index/: lancedb_store.rs
src/storage/: lancedb_store.rs
src/tasks/: list.rs
src/vector_store/: lancedb_store.rs
test_files/psds/: logoedit.psd
(+9 files in other folders)
