[workspace]
members = [
    "fetch-cli", 
    "fetch-common",
    "fetch-core",
    "fetch-gui",
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies
anyhow = { version = "1.0.98", features = ["backtrace"] }
camino = "1.1.9"
futures = "0.3.31"
tokio = { version = "1.47.0", features = ["signal", "sync", "rt-multi-thread", "macros"] }
