[workspace]
members = [
    "fetch-cli",
    "fetch-core",
    "fetch/src-tauri",
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies
anyhow = { version = "1.0.98", features = ["backtrace"] }
camino = { version = "1.1.9", features = ["serde1"] }
chrono = "0.4"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48.0", features = ["signal", "sync", "rt-multi-thread", "macros"] }
tokio-util = "0.7.17"

[profile.release]
# Optimize for size since compute-heavy work happens in ONNX Runtime
opt-level = "z"          # Optimize for size
lto = true               # Enable Link Time Optimization (removes dead code across crates)
codegen-units = 1        # Better optimization (slower compile, but smaller binary)
strip = true             # Strip debug symbols from binary
panic = "abort"          # Smaller panic handler (no unwinding)
