[package]
name = "fetch-cli"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "fetch-index"
path = "src/bin/index.rs"

[[bin]]
name = "fetch-query"
path = "src/bin/query.rs"

[[bin]]
name = "fetch-drop"
path = "src/bin/drop.rs"

[[bin]]
name = "fetch-daemon"
path = "src/bin/file_daemon.rs"

[dependencies]
# Workspace dependencies
fetch-core = { path = "../fetch-core" }
anyhow = { workspace = true }
camino = { workspace = true }
tokio = { workspace = true }

# CLI specific dependencies
clap = { workspace = true }
indicatif = { workspace = true }
normalize-path = { workspace = true }
futures = { workspace = true }
crossbeam-channel = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
tokio-util = { workspace = true }