[package]
name = "fetch-cli"
version = "0.0.2"
edition = "2021"

[[bin]]
name = "fetch-index"
path = "src/bin/index.rs"

[[bin]]
name = "fetch-query"
path = "src/bin/query.rs"

[[bin]]
name = "fetch-query-by-file"
path = "src/bin/query_by_file.rs"

[[bin]]
name = "fetch-drop"
path = "src/bin/drop.rs"

[[bin]]
name = "fetch-daemon"
path = "src/bin/file_daemon.rs"

[features]
cuda = ["fetch-core/cuda"]
qnn = ["fetch-core/qnn"]

[dependencies]
# Workspace dependencies
fetch-core = { path = "../fetch-core" }

anyhow = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

# CLI-specific dependencies
clap = { version = "4.5.32", features = ["derive"] }
crossbeam-channel = "0.5.15"
indicatif = "0.17.11"
normalize-path = "0.2.1"
notify = "8.0.0"
notify-debouncer-full = { version = "0.5.0", features = ["crossbeam-channel"] }
tokio-util = "0.7.15"

# Temporary for query-by-file
serde_json = { workspace = true }