[package]
name = "fetch-common"
version = "0.1.0"
edition = "2024"

[features]
default = ["ort/load-dynamic"]
cuda = ["ort/cuda"]
qnn = ["ort/qnn"]
tracing = ["ort/tracing"]

# most commonly used with disabling default to auto-download more basic builds of onnxruntime
# will probably not include execution providers. may or may not work with EP features.
# https://ort.pyke.io/perf/execution-providers
auto-onnx = ["ort/download-binaries", "ort/copy-dylibs"]

[dependencies]
ort = { version = "2.0.0-rc.10", default-features = false, features = ["std"] }