[package]
name = "fetch-core"
version = "0.0.2"
edition = "2021"

[features]
default = ["psd", "ort/load-dynamic"]
cuda = ["ort/cuda"]
qnn = ["ort/qnn"]

[build-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

reqwest = { version = "0.12", features = ["blocking", "json"] }

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

# LanceDB dependencies
arrow = "55.1"
arrow-array = "55.1"
arrow-schema = "55.1"
lancedb = { version = "0.21.1", default-features = false } # need oss maybe?

# NN Inference dependencies
ort = { version = "2.0.0-rc.10", default-features = false, features = ["std", "ndarray"] }
ndarray = { version = "0.16", default-features = false }

# Preview Generation dependencies
image = "0.25.6"
psd = { version = "0.3.5", optional = true }

# Other dependencies
config = "0.15.11"
dirs = "6.0.0"
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["v4"] }
tokenizers = "0.22.0"
log = "0.4.28"
