[package]
name = "fetch-gui"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "fetch-gui"
path = "src/main.rs"

[features]

[dependencies]
# Workspace dependencies
fetch-core = { path = "../fetch-core" }

anyhow = { workspace = true }
camino = { workspace = true }
tokio = { workspace = true }

# GUI-specific dependencies
iced = { version = "0.14.0-dev", git = "https://github.com/iced-rs/iced.git", features = ["image", "tokio", "advanced"] }