[package]
name = "fetch-gui"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "fetch-gui"
path = "src/main.rs"

[features]
cuda = ["fetch-common/cuda"]
qnn = ["fetch-common/qnn"]
tracing = ["fetch-common/tracing"]

[dependencies]
# Workspace dependencies
fetch-core = { path = "../fetch-core" }
fetch-common = { path = "../fetch-common" }

anyhow = { workspace = true }
camino = { workspace = true }
tokio = { workspace = true }

# GUI-specific dependencies
iced = { version = "0.14.0-dev", git = "https://github.com/iced-rs/iced.git", features = ["image", "tokio", "advanced"] }