[package]
name = "fetch-tauri"
version = "0.0.2"
description = "Fetch Tauri GUI"
authors = ["august99us"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fetch_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
cuda = ["fetch-common/cuda"]
qnn = ["fetch-common/qnn"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
fetch-core = { path = "../../fetch-core" }
fetch-common = { path = "../../fetch-common" }

camino = { workspace = true }
tokio = { workspace = true }

tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
