[package]
name = "fetch"
version.workspace = true
description = "Fetch"
authors = ["august99us"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fetch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
cuda = ["fetch-core/cuda"]
qnn = ["fetch-core/qnn"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = { workspace = true }

[dependencies]
fetch-core = { path = "../../fetch-core" }
fetch-cli = { path = "../../fetch-cli" }

camino = { workspace = true }
chrono = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
tauri-plugin-global-shortcut = "2"
